# ROS2-training

./: .gitignore  README.md
Practice_files/: add_two_ints_server.cpp  client_custom_interface.cpp  pub_custom_interface.cpp  service_custom_interface.cpp  sub_custom_interface.cpp
instructions/: common_tools.md  core_concepts.md  create_workspace.md  custom_ros2_interface.md  introduction.md  pub_sub.md  service_client.md  turtlesim_rqt.md  using_parameters.md
tutorial_ws/install/: local_setup.sh  setup.sh
tutorial_ws/install/cpp_parameters/lib/cpp_parameters/: parameter_node
tutorial_ws/install/cpp_parameters/share/cpp_parameters/: local_setup.sh  package.ps1  package.sh  package.xml
tutorial_ws/install/cpp_pubsub/lib/cpp_pubsub/: listener  listener_num  talker  talker_num
tutorial_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
tutorial_ws/install/cpp_srvcli/lib/cpp_srvcli/: client  client_three  server  server_three
tutorial_ws/install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.ps1  package.sh  package.xml
tutorial_ws/install/turtlesim/lib/turtlesim/: draw_square  (+3 more)
tutorial_ws/src/cpp_parameters/: CMakeLists.txt
tutorial_ws/src/cpp_parameters/launch/: cpp_parameters_launch.py
tutorial_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
tutorial_ws/src/cpp_pubsub/src/: publisher_member_function_num.cpp
tutorial_ws/src/cpp_srvcli/: CMakeLists.txt
tutorial_ws/src/my_package/: package.xml
tutorial_ws/src/tutorial_interface/: CMakeLists.txt  package.xml
tutorial_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
(+10 files in other folders)
